
Improved File Browser: added previews for screens (on .scr, .tap, .tzx, .pzx, .trd, .dsk, .sna, .sp, .z80, .p, .zsf)

Improved QL emulation:
-Added sound emulation
-Guessing of file name extension

Fixed QL bugs:
-Fixed loading QL Superbasic programs when line lenght usually longer than 128 bytes
-Fixed using QL system calls and A6 pointer offset used after previous Trap was not 4
-Fixed system call FS.HEADR
-Fixed system call IO.FSTRG
-Fixed system call IO.EDLIN
-Fixed system call IO.FCLOSE
-Fixed possible hang calling IO.SSTRG
-Fixed cursor flashing
-Fixed RTC emulation

Fixed reading keys on SDL and X11 drivers with default keymap and machines QL, MSX and Spectravideo
Fixed restoring machine to msx, coleco, sg1000 and svi
Fixed showing last core frame time in Core Statistics window

Fixed segfaults when changing machines and having ZX Desktop windows opened
Fixed easter egg and cyrillic characters
Fixed segfaults when initializing audio and video drivers
Fixed rendering ZX Desktop on startup
Fixed arranging ZX Vision windows when changing machine or disabling border
Fixed panic screen extracting tap when invalid block
Fixed open error when extracting tap with Spectrum names with '/'



Version 9.0 - Turbo Esprit edition. 17 August 2020

Added new emulated machines: 
-MSX1 
-Spectravideo 318/328
-Colecovision 
-Sega SG-1000

Added new compiled version: FreeBSD
Added support for compilation on Haiku
Added emulation of AY chip MIDI registers 14 & 15 and route them to an external MIDI device
Added browser for quicksave snapshots
Added save screen to bmp feature
Added menu to download ZEsarUX extras
Added Windows icon
Added F key to toggle top cpu speed
Added F key to pause/unpause tape
Added setting to rotate output tape when selecting tape that already exists
Added setting to resample audio output to 1 bit
Added showing yesterday ZEsarUX users 


Improved emulation: use a slightly less cpu on every scanline